# tensorflow-scikit-workflows

./: README.md  pyproject.toml
api/: __main__.py  pyproject.toml
api/api/app/: injector.py  router.py  server.py
api/api/controller/: sklearn_controller.py
api/api/dto/: RegressionResultDTO.py
core/: pyproject.toml
core/core/domain/: RegressionResult.py  regressionPipelineResult.py
core/core/domain/classification/: classificationResult.py
core/core/domain/clustering/: clusteringResult.py
core/core/domain/regression/: regressionPipelineResult.py  regressionResult.py
core/core/interfaces/classification/: IClassificationPipeline.py
core/core/services/: modelComparisonService.py  modelPersistanceService.py
core/core/utils/: logger.py
sklearnworkflows/: pyproject.toml
sklearnworkflows/sklearnworkflows/: SimpleModel.py  __init__.py
sklearnworkflows/sklearnworkflows/classification/: SimpleClassification.py
sklearnworkflows/sklearnworkflows/clustering/: SimpleClustering.py
sklearnworkflows/sklearnworkflows/examples/: SimpleLinearRegressionExample.py
sklearnworkflows/sklearnworkflows/regression/: SimpleLinearRegression.py
sklearnworkflows/tests/: test_sklearnworkflows.py
tensorflowworkflows/: pyproject.toml
tensorflowworkflows/tensorflowworkflows/classification/: SimpleClassification.py
tensorflowworkflows/tensorflowworkflows/clustering/: SimpleClustering.py
tensorflowworkflows/tensorflowworkflows/examples/: SimpleLinearRegressionExample.py
tensorflowworkflows/tensorflowworkflows/regression/: SimpleLinearRegression.py
(+2 files in other folders)
