[tool.poetry]
name = "TF-SK-Workflows"
version = "0.0.1"
description = "Tensorflow and SKLearn Workflows"
authors = ["bhf <bhf@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.12"
api = {path = "api", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
